--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
                     <div class="home__data">
                         <h1 class="home__title">Hi, I'm Smit</h1>
-                        <h3 class="home__subtitle"> IPM IIM | MBA | CFA</h3>
+                        <h3 class="home__subtitle"> Looking for Internship Opportunities</h3>
                         <p class="home__description"> I am gratified for the adversities and challenges which have crossed my path because they have strengthened my character and brought forth certain virtues I might otherwise never have known. </p>
                         <a href="#contact" class="button button-flex">
                             Contact Me <i class="uil uil-message button__icon"></i>
