--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                         <div class="skills__list grid">
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">R Programming | Python</h3>
+                                    <h3 class="skills__name">R Programming | Python | SQL</h3>
                                     <span class="skills__number">90%</span>
 
                                 </div>
@@ -212,7 +212,7 @@
 
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name"> HTML | CSS | Wordpress</h3>
+                                    <h3 class="skills__name"> HTML | CSS | JS | Wordpress</h3>
                                     <span class="skills__number">90%</span>
 
                                 </div>
@@ -224,7 +224,7 @@
 
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Tableau | SPSS</h3>
+                                    <h3 class="skills__name">Tableau | SPSS | Power BI</h3>
                                     <span class="skills__number">90%</span>
 
                                 </div>
