--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@
                     </div>
 
                     <div class="contact__content">
-                        <label for="" class="contact__label">Project</label>
+                        <label for="" class="contact__label">Subject</label>
                         <input type="text" class="contact__input">
                     </div>
 
