--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-FT6TXL90X7"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
 
-	  gtag('config', 'G-FT6TXL90X7');
-	</script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FT6TXL90X7"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-FT6TXL90X7');
+    </script>
 
     <!--==================== UNICONS ====================-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -155,9 +155,8 @@
                 <img src="assets/img/about.png" alt="" class="about__img">
 
                 <div class="about__data">
-                    <p class="about__description">With innovation and hard work at the core, I bring a different value to
-                        your firm. I'm humbled to be committed and responsible individual who
-                        has an organized approach. 
+                    <p class="about__description">I bring a unique value to your firm. My responsible and committed attitude lend an organized approach to my work. 
+                        I'm humbled to be a committed and responsible individual with an organized approach. 
                     </p>
 
                     <div class="about__info">
@@ -751,17 +750,17 @@
 
                         <li class="services__modal-service">
                             <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>I have neck of design, coupled with decent technical knowledge.</p>
+                            <p>I have an eye for design, coupled with fundamental technical knowledge.</p>
                         </li>
 
                         <li class="services__modal-service">
                             <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>I have interpersonal as well as analytical skills..</p>
+                            <p>I have interpersonal as well as analytical skills.</p>
                         </li>
 
                         <li class="services__modal-service">
                             <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>I believe in the problem solving attitude.</p>
+                            <p>I have a problem solving attitude.</p>
                         </li>
                     </ul>
                 </div>
@@ -787,7 +786,7 @@
                     <ul class="services__modal-services grid">
                         <li class="services__modal-service">
                             <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>I am commercially aware and quipped with knowledge.</p>
+                            <p>I am commercially aware and equipped with financial knowledge.</p>
                         </li>
 
                         <li class="services__modal-service">
@@ -797,7 +796,7 @@
 
                         <li class="services__modal-service">
                             <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>I have strong work ethic, thus can manage stress.</p>
+                            <p>I have a strong work ethic leading to effective stress management.</p>
                         </li>
 
                     </ul>
@@ -946,7 +945,7 @@
                     </div>
 
                     <div class="contact__content">
-                        <label for="" class="contact__label">Subject</label>
+                        <label for="" class="contact__label">Project</label>
                         <input type="text" class="contact__input">
                     </div>
 
