--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
 
                         <li class="services__modal-service">
                             <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>I visualise the data in best way</p>
+                            <p>I visualise the data in best way<./p>
                         </li>
 
                         <li class="services__modal-service">
