--- a/index.html
+++ b/index.html
@@ -422,6 +422,10 @@
                        2021 - 2022
                     </div>
                 </div>
+	     <div>
+                     <span class="qualification__rounder"></span>
+                     <span class="qualification__line"></span>
+                 </div>
             </div>
 		    
 	    <!--==================== QUALIFICATION 5 ====================--> 
