--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@
             <div class="footer__container container grid">
                 <div>
                     <h1 class="footer__title">Smit Lad</h1>
-                    <span class="footer__subtitle">IPM | MBA | CFA</span>
+                    <span class="footer__subtitle">IPM | MBA | FMVA | BIDA </span>
                 </div>
 
                 <ul class="footer__links">
