--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
                     <div class="home__data">
                         <h1 class="home__title">Hi, I'm Smit</h1>
-                        <h3 class="home__subtitle"> IPM IIM | MBA | FMVA | BIDA </h3>
+                        <h3 class="home__subtitle"> MBA | FMVA | BIDA </h3>
                         <p class="home__description"> I am gratified for the adversities and challenges which have crossed my path because they have strengthened my character and brought forth certain virtues I might otherwise never have known. </p>
                         <a href="#contact" class="button button-flex">
                             Contact Me <i class="uil uil-message button__icon"></i>
@@ -161,7 +161,7 @@
 
                     <div class="about__info">
                         <div>
-                            <span class="about__info-title">01+</span>
+                            <span class="about__info-title">2+</span>
                             <span class="about__info-name">Years of <br> experience</span>
                         </div>
 
@@ -717,9 +717,26 @@
                     <span class="qualification__subtitle">Indian Institute of Management Rohtak </span>
                     <div class="qualification__calendar">
                         <i class="uil uil-calendar-alt"></i>
-                        2019-Ongoing
+                        2019-21
                     </div>
                 </div>
+	       <!--==================== QUALIFICATION 6 ====================--> 
+               <div class="qualification__data">
+                   <div></div>
+                   <div>
+                       <span class="qualification__rounder"></span>
+                      <span class="qualification__line"></span>
+                   </div>
+   
+                   <div>
+                       <h3 class="qualification__title">Senior Coordinator <br> Placement Committee</h3>
+                       <span class="qualification__subtitle">Indian Institute of Management Rohtak</span>
+                       <div class="qualification__calendar">
+                          <i class="uil uil-calendar-alt"></i>
+                          2022-24
+                       </div>
+                   </div>
+               </div>
 
                 <div>
                     <span class="qualification__rounder"></span>
