--- a/index.html
+++ b/index.html
@@ -722,13 +722,28 @@
                 </div>
                 <div>
                     <span class="qualification__rounder"></span>
-                    <!-- <span class="qualification__line"></span>-->
+                    <span class="qualification__line"></span>
                 </div>
                 </div> 
-
-
+                            <!--==================== QUALIFICATION 6 ====================--> 
+               <div class="qualification__data">
+                   <div></div>
+                   <div>
+                       <span class="qualification__rounder"></span>
+                      <!--<span class="qualification__line"></span>-->
+                   </div>
+   
+                   <div>
+                       <h3 class="qualification__title">Coordinator <br> Placement Committee</h3>
+                       <span class="qualification__subtitle">Indian Institute of Management Rohtak</span>
+                       <div class="qualification__calendar">
+                          <i class="uil uil-calendar-alt"></i>
+                          2022-24
+                       </div>
+                   </div>
+                 
                </div>
-             
+               </div>
                </div>
             </div>
         </section>
