--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
         <div class="services__content">
             <div>
                 <i class="uil uil-comparison services__icon"></i>
-                <h3 class="services__title">Data &  <br> Analysis</h3>
+                <h3 class="services__title">Data Driven Marketing</h3>
             </div>
             <span class="button button--flex button--small button--link services__button">
                 View more
@@ -778,7 +778,7 @@
 
                         <li class="services__modal-service">
                             <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>I visualise the data in best way<./p>
+                            <p>I visualise the data in best way.</p>
                         </li>
 
                         <li class="services__modal-service">
